@startuml diagrama_completo
hide circle
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #444444
skinparam ArrowColor #444444
skinparam linetype ortho

' ================================================================
' MODEL - CLASSES ABSTRATAS
' ================================================================

abstract class Pessoa {
    - nome : str
    - celular : str
    - cpf : str
    --
    + {abstract} descricao() : str
    + __str__() : str
}

abstract class Pagamento {
    - data_pagamento : date
    - valor_pago : float
    --
    + valor_restante : float
    + {abstract} modalidade() : str
    + __str__() : str
}

' ================================================================
' MODEL - HERANÇA DE PESSOA
' ================================================================

class Paciente {
    - data_nascimento : date
    --
    + idade : int
    + descricao() : str
}

class Profissional {
    - especialidade : str
    - registro_profissional : str
    --
    + descricao() : str
}

Pessoa <|-- Paciente
Pessoa <|-- Profissional

' ================================================================
' MODEL - HERANÇA DE PAGAMENTO
' ================================================================

class PagamentoDinheiro {
    + modalidade() : str
}

class PagamentoPix {
    - cpf_pagador : str
    --
    + modalidade() : str
}

class PagamentoCartao {
    - numero_cartao : str
    - bandeira : str
    --
    + modalidade() : str
}

Pagamento <|-- PagamentoDinheiro
Pagamento <|-- PagamentoPix
Pagamento <|-- PagamentoCartao

' ================================================================
' MODEL - DEMAIS ENTIDADES
' ================================================================

class Clinica {
    - nome : str
    - cidade : str
    - descricao : str
    - horario_abertura : time
    - horario_fechamento : time
    --
    + __str__() : str
}

class TipoAtendimento {
    - descricao : str
    --
    + __str__() : str
}

class Procedimento {
    - descricao : str
    - custo : float
    --
    + __str__() : str
}

class Atendimento {
    - data : date
    - hora_inicio : time
    - hora_fim : time
    - valor : float
    --
    + adicionar_procedimento(p : Procedimento)
    + __str__() : str
}

' ================================================================
' RELAÇÕES - MODEL
' ================================================================

' Agregação: Clínica existe independente de Atendimento
Clinica "1" o-- "0..*" Atendimento : realizado em >

' Associações de Atendimento
Atendimento "0..*" --> "1" Paciente : < atendido
Atendimento "0..*" --> "1" Profissional : realizado por >
Atendimento "0..*" --> "1" TipoAtendimento : do tipo >

' Composição: Procedimento só existe dentro de Atendimento
Atendimento "1" *-- "0..*" Procedimento : contém >

' Associação: Procedimento feito por Profissional
Procedimento "0..*" --> "1" Profissional : responsável >

' Agregação: Pagamento referencia Atendimento (existe independentemente para histórico)
Atendimento "1" o-- "0..*" Pagamento : pago por >

' Associação: Pagamento feito por Paciente
Pagamento "0..*" --> "1" Paciente : efetuado por >

' ================================================================
' CONTROLLERS
' ================================================================

class ControladorGeral {
    - ctrl_clinica : ControladorClinica
    - ctrl_paciente : ControladorPaciente
    - ctrl_profissional : ControladorProfissional
    - ctrl_tipo_atendimento : ControladorTipoAtendimento
    - ctrl_atendimento : ControladorAtendimento
    - ctrl_pagamento : ControladorPagamento
    --
    + iniciar() : void
    + abrir_menu_principal() : void
}

class ControladorClinica {
    - __clinicas : list[Clinica]
    --
    + incluir_clinica() : void
    + alterar_clinica(nome : str) : void
    + excluir_clinica(nome : str) : void
    + listar_clinicas() : list
    + buscar_por_nome(nome : str) : Clinica
}

class ControladorPaciente {
    - __pacientes : list[Paciente]
    --
    + incluir_paciente() : void
    + alterar_paciente(cpf : str) : void
    + excluir_paciente(cpf : str) : void
    + listar_pacientes() : list
    + buscar_por_cpf(cpf : str) : Paciente
}

class ControladorProfissional {
    - __profissionais : list[Profissional]
    --
    + incluir_profissional() : void
    + alterar_profissional(cpf : str) : void
    + excluir_profissional(cpf : str) : void
    + listar_profissionais() : list
    + buscar_por_cpf(cpf : str) : Profissional
}

class ControladorTipoAtendimento {
    - __tipos : list[TipoAtendimento]
    --
    + incluir_tipo() : void
    + alterar_tipo(descricao : str) : void
    + excluir_tipo(descricao : str) : void
    + listar_tipos() : list
}

class ControladorAtendimento {
    - __atendimentos : list[Atendimento]
    --
    + incluir_atendimento() : void
    + alterar_atendimento() : void
    + excluir_atendimento() : void
    + listar_atendimentos() : list
    + relatorio_clinica_mais_atendimentos() : list
    + relatorio_mais_caros_baratos() : list
    + relatorio_procedimentos_populares() : list
}

class ControladorPagamento {
    - __pagamentos : list[Pagamento]
    --
    + incluir_pagamento() : void
    + alterar_pagamento() : void
    + excluir_pagamento() : void
    + listar_pagamentos() : list
}

' ================================================================
' VIEWS
' ================================================================

class TelaMenuPrincipal {
    + mostrar_opcoes() : int
    + mostrar_mensagem(msg : str) : void
}

class TelaClinica {
    + pegar_dados_clinica() : dict
    + mostrar_clinicas(lista : list) : void
    + pegar_nome() : str
    + mostrar_mensagem(msg : str) : void
}

class TelaPaciente {
    + pegar_dados_paciente() : dict
    + mostrar_pacientes(lista : list) : void
    + pegar_cpf() : str
    + mostrar_mensagem(msg : str) : void
}

class TelaProfissional {
    + pegar_dados_profissional() : dict
    + mostrar_profissionais(lista : list) : void
    + pegar_cpf() : str
    + mostrar_mensagem(msg : str) : void
}

class TelaAtendimento {
    + pegar_dados_atendimento() : dict
    + mostrar_atendimentos(lista : list) : void
    + mostrar_relatorio(dados : list) : void
    + mostrar_mensagem(msg : str) : void
}

class TelaPagamento {
    + pegar_dados_pagamento() : dict
    + mostrar_pagamentos(lista : list) : void
    + pegar_modalidade() : str
    + mostrar_mensagem(msg : str) : void
}

' ================================================================
' RELAÇÕES - MVC
' ================================================================

' ControladorGeral compõe todos os controladores específicos
ControladorGeral "1" *-- "1" ControladorClinica
ControladorGeral "1" *-- "1" ControladorPaciente
ControladorGeral "1" *-- "1" ControladorProfissional
ControladorGeral "1" *-- "1" ControladorTipoAtendimento
ControladorGeral "1" *-- "1" ControladorAtendimento
ControladorGeral "1" *-- "1" ControladorPagamento

' Cada controlador usa sua tela (composição)
ControladorClinica "1" *-- "1" TelaClinica
ControladorPaciente "1" *-- "1" TelaPaciente
ControladorProfissional "1" *-- "1" TelaProfissional
ControladorAtendimento "1" *-- "1" TelaAtendimento
ControladorPagamento "1" *-- "1" TelaPagamento
ControladorGeral "1" *-- "1" TelaMenuPrincipal

' Controladores gerenciam as entidades (agregação)
ControladorClinica "1" o-- "0..*" Clinica
ControladorPaciente "1" o-- "0..*" Paciente
ControladorProfissional "1" o-- "0..*" Profissional
ControladorTipoAtendimento "1" o-- "0..*" TipoAtendimento
ControladorAtendimento "1" o-- "0..*" Atendimento
ControladorPagamento "1" o-- "0..*" Pagamento

' Controladores dependem uns dos outros (associação)
ControladorAtendimento "1" --> "1" ControladorClinica
ControladorAtendimento "1" --> "1" ControladorPaciente
ControladorAtendimento "1" --> "1" ControladorProfissional
ControladorAtendimento "1" --> "1" ControladorTipoAtendimento
ControladorPagamento "1" --> "1" ControladorAtendimento
ControladorPagamento "1" --> "1" ControladorPaciente

@enduml
